# whisperX

./: .gitignore  pyproject.toml
examples/: benchmark.py  transcribe_base.py  transcribe_fw.py
tests/: test_transcribe.py
whisperloud/backends/: faster_whisper.py
whisperx/: alignment.py  asr.py  vad.py
