[tool.poetry]
name = "whisperx"
version = "3.1.2"
description = "Time-Accurate Automatic Speech Recognition using Whisper."
readme = "README.md"
authors = ["Max Bain"]
license = "MIT"
homepage = "https://github.com/m-bain/whisperx"
keywords = ["ASR", "speech recognition", "Whisper"]
# packages = [{ include = "whisperx", exclude = ["tests*"] }]

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2"
torchaudio = "^2"
transformers = "*"
pandas = "*"
nltk = "*"
pyannote-audio = "^3.3.1"
faster-whisper = {git = "https://github.com/mludolph/faster-whisper.git"}

[tool.poetry.scripts]
whisperx = "whisperx.transcribe:cli"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"
ruff = "^0.5.6"
pre-commit = "^3.8.0"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
snakeviz = "^2.2.0"

[tool.mypy]
plugins = []
ignore_missing_imports = true

[tool.ruff.lint]
extend-select = ["A", "PL", "DTZ", "I", "ANN"]
extend-ignore = ["ANN101", "ANN102", "ANN401", "A002", "A003"]

[tool.ruff.extend-per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true
allow-star-arg-any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
